log
Sat 27 Apr 2024 09:37:47 PM UTC: 
In file included from hashmap.c:6,
                 from test.c:4:
hashmap.h: In function ‘insertMap’:
hashmap.h:24:34: error: invalid use of incomplete typedef ‘HashMap’
   24 |     long hash = (long)key % table->capacity;
      |                                  ^~
hashmap.h:25:23: error: invalid use of incomplete typedef ‘HashMap’
   25 |     Pair * aux = table->buckets[hash];
      |                       ^~
hashmap.h:28:14: error: invalid use of incomplete typedef ‘HashMap’
   28 |         table->buckets[hash] = createPair(key, value);
      |              ^~
hashmap.h:28:32: error: implicit declaration of function ‘createPair’; did you mean ‘createMap’? [-Werror=implicit-function-declaration]
   28 |         table->buckets[hash] = createPair(key, value);
      |                                ^~~~~~~~~~
      |                                createMap
hashmap.h:29:14: error: invalid use of incomplete typedef ‘HashMap’
   29 |         table->size++;
      |              ^~
hashmap.h:33:18: error: ‘Pair’ has no member named ‘next’
   33 |         while(aux->next!=NULL)
      |                  ^~
hashmap.h:40:22: error: ‘Pair’ has no member named ‘next’
   40 |             aux = aux->next;
      |                      ^~
hashmap.h:47:12: error: ‘Pair’ has no member named ‘next’
   47 |         aux->next = createPair(key, value);
      |            ^~
hashmap.h:48:14: error: invalid use of incomplete typedef ‘HashMap’
   48 |         table->size++;
      |              ^~
hashmap.h:24:10: error: variable ‘hash’ set but not used [-Werror=unused-but-set-variable]
   24 |     long hash = (long)key % table->capacity;
      |          ^~~~
In file included from test.c:4:
hashmap.c: At top level:
hashmap.c:19:8: error: conflicting types for ‘createPair’; have ‘Pair *(char *, void *)’
   19 | Pair * createPair( char * key,  void * value) {
      |        ^~~~~~~~~~
In file included from hashmap.c:6,
                 from test.c:4:
hashmap.h:28:32: note: previous implicit declaration of ‘createPair’ with type ‘int()’
   28 |         table->buckets[hash] = createPair(key, value);
      |                                ^~~~~~~~~~
In file included from test.c:4:
hashmap.c:42:6: error: redefinition of ‘insertMap’
   42 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
In file included from hashmap.c:6,
                 from test.c:4:
hashmap.h:22:6: note: previous definition of ‘insertMap’ with type ‘void(HashMap *, char *, void *)’ {aka ‘void(struct HashMap *, char *, void *)’}
   22 | void insertMap(HashMap * table, char * key, void * value)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
54a71ac
Sat 27 Apr 2024 09:40:54 PM UTC: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:7: error: expected expression before ‘{’ token
   47 |       {
      |       ^
Compilation failed
623a7fd
Sat 27 Apr 2024 09:41:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
724c26d
Sat 27 Apr 2024 09:43:12 PM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  0|0
da4a813
Sat 27 Apr 2024 09:45:03 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f98a5fa
Sat 27 Apr 2024 09:49:27 PM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:62:29: error: too many arguments to function ‘malloc’
   62 |     map->buckets = (Pair **)malloc(map->capacity,sizeof(Pair *));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
Compilation failed
ce7abc6
Sat 27 Apr 2024 09:57:31 PM UTC: 
 hashmap.c | 21 ++++++++++-----------
 1 file changed, 10 insertions(+), 11 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:57:24: error: multi-line comment [-Werror=comment]
   57 |     enlarge_called = 1;//no borrar (testing purposes)\
      |                        ^
hashmap.c:67:23: error: ‘aux’ undeclared (first use in this function)
   67 |         insertMap(map,aux[i]->key,aux[i]->value);
      |                       ^~~
hashmap.c:67:23: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
99bdc17
Sat 27 Apr 2024 09:57:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:58:5: error: unknown type name ‘hashelem’
   58 |     hashelem** aux = map->buckets;
      |     ^~~~~~~~
hashmap.c:58:22: error: initialization of ‘int **’ from incompatible pointer type ‘Pair **’ [-Werror=incompatible-pointer-types]
   58 |     hashelem** aux = map->buckets;
      |                      ^~~
hashmap.c:67:29: error: request for member ‘key’ in something not a structure or union
   67 |         insertMap(map,aux[i]->key,aux[i]->value);
      |                             ^~
hashmap.c:67:41: error: request for member ‘value’ in something not a structure or union
   67 |         insertMap(map,aux[i]->key,aux[i]->value);
      |                                         ^~
cc1: all warnings being treated as errors
Compilation failed
306cdfc
